Composite theme tab background images against default frame color.

This ensures the background images drawn by Tab will not be transparent even if
they are transparent in the original theme.  Tab assumes its background is fully
opaque, so that subpixel AA is guaranteed to work.

BUG=819865
TEST=Install theme in bug comment 25, verify background tab text is readable

Change-Id: If75228398b9ae05b275e530c3900b087a5f94139
Reviewed-on: https://chromium-review.googlesource.com/969835
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544403}
Former-commit-id: d0fdb25b296f5aa7440891800c6fcc919331a169